Reduced health of Kragul to 8, in Hard, this means 2 less hits to kill, in Normal/Easy it is 1 less hit to kill, also fixed a bug with it's attack where it would hit twice in
one attack
Converted Mindcrack into an extended Doomsday in order to persist removing surrounding entities's motion
Added Shotgun and Firestorm combination Doomsdays
Fixed initial bug with Shotgun Doomsday

--
The Tragic Armor and Tragic Sentinal Doomsdays will combine to form Isolation, which inflicts high damage and knocks all mobs away from the user, Tragic Armor's normal one
will be Harden, which gives the player a quick resistance 10 buff (3 seconds, short cooldown of maybe 10), the Sentinel Doomsday will inflict damage on all mobs near the player
at a constant rate but will not knock them away, it'll also leech Doom off of them
The Tragic Hellraiser's Doomsday will be Judgment day, which will stall all mobs into the air and inflict judgment damage onto them (they take damage equal to one-tenth of
their max health, this caps at around 15 though so that bosses don't get killed by this)

Started planning for Nyx and Erebus, the previous plan will be scrapped and they'll be converted into a single strong boss, which can be summoned with Darkened Quartz and
a Time Disruption Cube (similarly to the Time Controller), it'll work like a hybrid between the Ender Dragon and the 1.8 mob, the Guardian. It'll float and have super high
attack damage, it'll spawn dark energy crystals around itself which heal it and give it extra abilities (only spawn a few once per minute or so), it'll use a tracker beam of
sorts that pulls it's target towards it for a very high damage, high knockback hit, it can also shoot a dark energy projectile which hits the ground below it with lightning
It'll be named the Enyvil (the previous mob plan will be scrapped and it's appearance will be adapted to look more "epic boss"-like)

--Reminders--
Add the Enyvil, Claymation and the Erkel (2 bosses, and a passive mob)