@@ -7,7 +7,7 @@ import net.minecraft.util.MovingObjectPosition;
 import net.minecraft.world.World;
 
 public class EntityBanana extends EntityThrowable {
-	
+
 	public EntityBanana(World world) {
 		super(world);
 	}
@@ -15,11 +15,11 @@ public class EntityBanana extends EntityThrowable {
 	public EntityBanana(World par1World, EntityLivingBase par2EntityLivingBase) {
 		super(par1World, par2EntityLivingBase);
 	}
-	
+
 	public EntityBanana(World world, double par2, double par4, double par6, boolean flag) {
 		super(world, par2, par4, par6);
 	}
-	
+
 	@Override
 	protected float getGravityVelocity() {
 		return inGround ? 0.0F : 0.05F;
@@ -27,22 +27,23 @@ public class EntityBanana extends EntityThrowable {
 
 	@Override
 	protected void onImpact(MovingObjectPosition mop) {
-		
-		if (!inGround) {
-			for (int l = 0; l < 4; ++l) {
+
+		if (this.worldObj.isRemote)
+		{ 
+			for (int l = 0; l < 4; ++l) 
+			{
 				worldObj.spawnParticle("crit", posX, posY, posZ, 0.0D, 0.0D, 0.0D);
 			}
 		}
-
-		if (mop.entityHit != null && !inGround) 
+		else
 		{
-			mop.entityHit.attackEntityFrom(DamageSource.causeThrownDamage(this, getThrower()), 1.0F);
+			if (mop.entityHit != null && !inGround) 
+			{
+				mop.entityHit.attackEntityFrom(DamageSource.causeThrownDamage(this, getThrower()), 1.0F);
+			}
 		}
 
-		if (!worldObj.isRemote) 
-		{
-			this.setDead();
-		}
+		this.setDead();
 	}
 
 }
