@@ -29,7 +29,7 @@ public class EntityDarkEnergy extends EntityProjectile {
 
 	@Override
 	protected void onImpact(MovingObjectPosition mop) {
-		if (mop.entityHit != null && !inGround) 
+		if (mop.entityHit != null && !inGround && !this.worldObj.isRemote) 
 		{			
 			if (!(mop.entityHit instanceof EntityLivingBase)) return;
 			
