@@ -1,13 +1,19 @@
 package tragicneko.tragicmc.items.weapons;
 
+import net.minecraft.client.Minecraft;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.item.ItemStack;
+import net.minecraft.server.management.ItemInWorldManager;
+import net.minecraft.world.World;
+import tragicneko.tragicmc.TragicMC;
 import tragicneko.tragicmc.doomsday.Doomsday;
 import tragicneko.tragicmc.main.TragicItems;
-import tragicneko.tragicmc.main.TragicTabs;
 
 public class EpicWeapon extends TragicWeapon {
 
 	public EpicWeapon(Doomsday dday) {
 		super(TragicItems.toolEpic, dday);
 	}
-
 }
